updates: optimizing backend services